# tusk

./: README.md  pyproject.toml
example/: .tusk.toml  readme.md  schema.sql
example/expected/: users.out
example/seeds/: users.sql
example/tests/: users.sql
tests/: test_tusk.py
tusk/: __main__.py
